--- a/graphql-pagination/package.json
+++ b/graphql-pagination/package.json
@@ -29,6 +29,7 @@
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link": "^1.2.14",
+    "apollo-link-context": "^1.0.20",
     "graphql": "^15.3.0",
     "graphql-tag": "^2.10.4",
     "rxjs": "~6.5.1",
