--- a/graphql-pagination/package.json
+++ b/graphql-pagination/package.json
@@ -32,6 +32,7 @@
     "apollo-link-context": "^1.0.20",
     "graphql": "^15.3.0",
     "graphql-tag": "^2.10.4",
+    "ng-search-pipe": "^1.0.2",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
