--- a/graphql-pagination/package.json
+++ b/graphql-pagination/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~9.1.6",
     "@capacitor/core": "2.2.1",
     "@ionic-native/core": "^5.0.7",
+    "@ionic-native/in-app-browser": "^5.27.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
@@ -34,6 +35,7 @@
     "apollo-client": "^2.6.10",
     "apollo-link": "^1.2.14",
     "apollo-link-context": "^1.0.20",
+    "cordova-plugin-inappbrowser": "^4.0.0",
     "graphql": "^15.3.0",
     "graphql-tag": "^2.10.4",
     "ng-search-pipe": "^1.0.2",
