--- a/graphql-pagination/tsconfig.json
+++ b/graphql-pagination/tsconfig.json
@@ -15,7 +15,8 @@
     "noImplicitAny": true,
     "strictNullChecks": true,
     "noImplicitReturns": true,
-    "lib": ["es2018", "dom", "esnext.asynciterable"]
+    "lib": ["es2018", "dom", "esnext.asynciterable"],
+    "resolveJsonModule": true
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
